CardStock/RecycleParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/markgoadrich/Github/cardstock/CardStock/Recycle.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class RecycleParser : Parser
{
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
		T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
		T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
		T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
		T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
		T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
		T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
		T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59,
		T__59 = 60, T__60 = 61, T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66,
		T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, T__72 = 73,
		T__73 = 74, T__74 = 75, T__75 = 76, T__76 = 77, T__77 = 78, T__78 = 79, T__79 = 80,
		T__80 = 81, T__81 = 82, T__82 = 83, BOOLOP = 84, COMPOP = 85, EQOP = 86, UNOP = 87,
		INTNUM = 88, LETT = 89, OPEN = 90, CLOSE = 91, WS = 92, ANY = 93;
	public const int
		RULE_var = 0, RULE_vars = 1, RULE_varo = 2, RULE_varp = 3, RULE_vari = 4,
		RULE_varb = 5, RULE_varc = 6, RULE_varcs = 7, RULE_varcsc = 8, RULE_varcard = 9,
		RULE_vart = 10, RULE_game = 11, RULE_declare = 12, RULE_setup = 13, RULE_scoring = 14,
		RULE_stage = 15, RULE_endcondition = 16, RULE_multiaction = 17, RULE_multiaction2 = 18,
		RULE_condact = 19, RULE_agg = 20, RULE_let = 21, RULE_action = 22, RULE_playercreate = 23,
		RULE_teamcreate = 24, RULE_teams = 25, RULE_deckcreate = 26, RULE_deck = 27,
		RULE_attribute = 28, RULE_initpoints = 29, RULE_updatepoints = 30, RULE_awards = 31,
		RULE_subaward = 32, RULE_cycleaction = 33, RULE_setaction = 34, RULE_setstraction = 35,
		RULE_incaction = 36, RULE_decaction = 37, RULE_moveaction = 38, RULE_swapaction = 39,
		RULE_copyaction = 40, RULE_removeaction = 41, RULE_shuffleaction = 42,
		RULE_turnaction = 43, RULE_repeat = 44, RULE_pointstorage = 45, RULE_card = 46,
		RULE_maxof = 47, RULE_minof = 48, RULE_locpre = 49, RULE_locdesc = 50,
		RULE_who = 51, RULE_whop = 52, RULE_whot = 53, RULE_whodesc = 54, RULE_owner = 55,
		RULE_teamp = 56, RULE_typed = 57, RULE_collection = 58, RULE_strcollection = 59,
		RULE_range = 60, RULE_other = 61, RULE_cstorage = 62, RULE_basecstorage = 63,
		RULE_unionof = 64, RULE_intersectof = 65, RULE_disjunctionof = 66, RULE_filter = 67,
		RULE_memstorage = 68, RULE_sequence = 69, RULE_runsequence = 70, RULE_cstoragecollection = 71,
		RULE_run = 72, RULE_subset = 73, RULE_partition = 74, RULE_aggcs = 75,
		RULE_indexed = 76, RULE_boolean = 77, RULE_intop = 78, RULE_aggb = 79,
		RULE_int = 80, RULE_intgr = 81, RULE_sum = 82, RULE_scoremax = 83, RULE_scoremin = 84,
		RULE_score = 85, RULE_add = 86, RULE_mult = 87, RULE_subtract = 88, RULE_mod = 89,
		RULE_divide = 90, RULE_exponent = 91, RULE_triangular = 92, RULE_fibonacci = 93,
		RULE_random = 94, RULE_sizeof = 95, RULE_aggi = 96, RULE_rawstorage = 97,
		RULE_pid = 98, RULE_tid = 99, RULE_str = 100, RULE_strstorage = 101, RULE_cardatt = 102,
		RULE_namegr = 103;
	public static readonly string[] ruleNames = {
		"var", "vars", "varo", "varp", "vari", "varb", "varc", "varcs", "varcsc",
		"varcard", "vart", "game", "declare", "setup", "scoring", "stage", "endcondition",
		"multiaction", "multiaction2", "condact", "agg", "let", "action", "playercreate",
		"teamcreate", "teams", "deckcreate", "deck", "attribute", "initpoints",
		"updatepoints", "awards", "subaward", "cycleaction", "setaction", "setstraction",
		"incaction", "decaction", "moveaction", "swapaction", "copyaction", "removeaction",
		"shuffleaction", "turnaction", "repeat", "pointstorage", "card", "maxof",
		"minof", "locpre", "locdesc", "who", "whop", "whot", "whodesc", "owner",
		"teamp", "typed", "collection", "strcollection", "range", "other", "cstorage",
		"basecstorage", "unionof", "intersectof", "disjunctionof", "filter", "memstorage",
		"sequence", "runsequence", "cstoragecollection", "run", "subset", "partition",
		"aggcs", "indexed", "boolean", "intop", "aggb", "int", "intgr", "sum",
		"scoremax", "scoremin", "score", "add", "mult", "subtract", "mod", "divide",
		"exponent", "triangular", "fibonacci", "random", "sizeof", "aggi", "rawstorage",
		"pid", "tid", "str", "strstorage", "cardatt", "namegr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'''", "'game'", "'declare'", "'setup'", "'scoring'", "'min'", "'max'",
		"'stage'", "'player'", "'team'", "'simultaneous'", "'once'", "'end'",
		"'choice'", "'do'", "'any'", "'all'", "'let'", "'create'", "'players'",
		"'teams'", "','", "'deck'", "'set'", "'update'", "':'", "'cycle'", "'next'",
		"'current'", "'inc'", "'dec'", "'move'", "'swap'", "'remember'", "'forget'",
		"'shuffle'", "'faro'", "'turn'", "'pass'", "'repeat'", "'points'", "'top'",
		"'bottom'", "'using'", "'vloc'", "'iloc'", "'hloc'", "'oloc'", "'mem'",
		"'previous'", "'owner'", "'range'", "'..'", "'other'", "'union'", "'intersect'",
		"'disjunction'", "'filter'", "'run'", "'runs'", "'largest'", "'subsets'",
		"'partition'", "'indexed'", "'sum'", "'scoremax'", "'scoremin'", "'score'",
		"'+'", "'*'", "'-'", "'%'", "'//'", "'^'", "'tri'", "'fib'", "'random'",
		"'size'", "'sto'", "'pid'", "'tid'", "'str'", "'cardatt'", null, null,
		null, "'not'", null, null, "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, null, null, null, null, null,
		"BOOLOP", "COMPOP", "EQOP", "UNOP", "INTNUM", "LETT", "OPEN", "CLOSE",
		"WS", "ANY"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Recycle.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static RecycleParser()
	{
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++)
		{
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

	public RecycleParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

	public RecycleParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
	: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class VarContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVar(this);
		}
	}

	[RuleVersion(0)]
	public VarContext var()
	{
		VarContext _localctx = new VarContext(Context, State);
		EnterRule(_localctx, 0, RULE_var);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 208;
				Match(T__0);
				State = 209;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarsContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vars; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVars(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVars(this);
		}
	}

	[RuleVersion(0)]
	public VarsContext vars()
	{
		VarsContext _localctx = new VarsContext(Context, State);
		EnterRule(_localctx, 2, RULE_vars);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 211;
				Match(T__0);
				State = 212;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VaroContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VaroContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varo; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVaro(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVaro(this);
		}
	}

	[RuleVersion(0)]
	public VaroContext varo()
	{
		VaroContext _localctx = new VaroContext(Context, State);
		EnterRule(_localctx, 4, RULE_varo);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 214;
				Match(T__0);
				State = 215;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarpContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVarp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVarp(this);
		}
	}

	[RuleVersion(0)]
	public VarpContext varp()
	{
		VarpContext _localctx = new VarpContext(Context, State);
		EnterRule(_localctx, 6, RULE_varp);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 217;
				Match(T__0);
				State = 218;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VariContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vari; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVari(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVari(this);
		}
	}

	[RuleVersion(0)]
	public VariContext vari()
	{
		VariContext _localctx = new VariContext(Context, State);
		EnterRule(_localctx, 8, RULE_vari);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 220;
				Match(T__0);
				State = 221;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarbContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarbContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varb; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVarb(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVarb(this);
		}
	}

	[RuleVersion(0)]
	public VarbContext varb()
	{
		VarbContext _localctx = new VarbContext(Context, State);
		EnterRule(_localctx, 10, RULE_varb);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 223;
				Match(T__0);
				State = 224;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarcContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVarc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVarc(this);
		}
	}

	[RuleVersion(0)]
	public VarcContext varc()
	{
		VarcContext _localctx = new VarcContext(Context, State);
		EnterRule(_localctx, 12, RULE_varc);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 226;
				Match(T__0);
				State = 227;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarcsContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarcsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varcs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVarcs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVarcs(this);
		}
	}

	[RuleVersion(0)]
	public VarcsContext varcs()
	{
		VarcsContext _localctx = new VarcsContext(Context, State);
		EnterRule(_localctx, 14, RULE_varcs);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 229;
				Match(T__0);
				State = 230;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarcscContext : ParserRuleContext
	{
		private string cache;
		public override string GetText()
		{
			if (cache is null)
			{
				cache = base.GetText();
			}
			return cache;
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public NamegrContext namegr()
		{
			return GetRuleContext<NamegrContext>(0);
		}
		public VarcscContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varcsc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.EnterVarcsc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener)
		{
			IRecycleListener typedListener = listener as IRecycleListener;
			if (typedListener != null) typedListener.ExitVarcsc(this);
		}
	}

	[RuleVersion(0)]
	public VarcscContext varcsc()
	{
		VarcscContext _localctx = new VarcscContext(Context, State);
		EnterRule(_localctx, 16, RULE_varcsc);
		try
		{
			EnterOuterAlt(_localctx, 1);
			{
				State = 232;
				Match(T__0);
				State = 233;
				namegr();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally
		{
			ExitRule();
		}
		return _localctx;
	}
